GNOME Bugzilla – Bug 781695
vaapi: leak of vpp surface in GstVaapiWindowWayland
Last modified: 2017-04-25 09:36:10 UTC
See commit message.
Created attachment 350371 [details] [review] libs: windows: wayland: fix leak if failure of sync Sometimes gst_vaapi_window_wayland_sync returns FALSE when poll returns EBUSY during destruction. In this case, if GstVaapiWindow is using vpp, leak of vpp surface happens. This surface is not attached to anything at this moment, so we should release it manually.
Comment on attachment 350371 [details] [review] libs: windows: wayland: fix leak if failure of sync lgtm
Attachment 350371 [details] pushed as 2d7c763 - libs: windows: wayland: fix leak if failure of sync